# wicked-orchestration

./: .gitignore  ARCHITECTURE.md  Cargo.toml  README.md  package-lock.json  package.json
.github/workflows/: ci.yml  publish.yml
docs/adr/: 0001-event-model-over-wicked-bus.md  0002-skills-and-hooks-dual-surface.md  0003-gate-precedence-with-governance.md
lib/: events.mjs  gate.mjs  reducer.mjs  store.mjs
schema/: 0001_init.sql
scripts/: publish.sh
skills/orchestration-phase/: SKILL.md
skills/orchestration-workflow/: SKILL.md
src/: domain.rs  gate.rs  lib.rs  reducer.rs  runner.rs  transitions.rs
test/: batch-b.e2e.test.mjs  contract.test.mjs
