[package]
name = "wicked-orchestration"
version = "0.1.0"
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/mikeparcewski/wicked-orchestration"
keywords = ["wicked", "agents", "orchestration", "workflow", "ai"]
categories = ["development-tools"]
description = "Event-driven work orchestration on the shared wicked-estate store — workflow/phase reducer with a structural gate veto (a denied phase cannot reach approved by any route). Programs against wicked-apps-core; no governance dep (lane-disjoint)."

[dependencies]
wicked-apps-core = "0.1.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
